Tweak minor update